--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: graphql_types_builder
-description: A starting point for Dart libraries or applications.
-version: 1.0.0
+description: Generates GraphQL types from a JSON schema.
+version: 0.1.0
 # homepage: https://www.example.com
 environment:
   sdk: ">=2.16.1 <3.0.0"
